data/derived/fa15/progs/unify/prog2100.ml.out
Characters 60-64:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
